fix text align of menus

--- a/src/styles/react-app-menu.scss
+++ b/src/styles/react-app-menu.scss
@@ -89,6 +89,7 @@ ul.reactAppMenubar--menu--submenus {
   position: relative;
   cursor: default;
   padding: 4px 6px;
+  text-align: left;
 }
 
 .reactAppMenubar--menu:not(.reactAppMenubar--menu-root) > .reactAppMenubar--menu--labelContainer {
